Add title enrichment fallback to use speaker

--- a/.github/workflows/ics_manual_test.yml
+++ b/.github/workflows/ics_manual_test.yml
@@ -6,7 +6,7 @@ on:
       enrich_titles:
         description: 'Fetch event page subtitle into title field'
         required: false
-        default: 'false'
+        default: 'true'
 
 permissions:
   contents: write
