--- a/.github/workflows/ics_to_json.yml
+++ b/.github/workflows/ics_to_json.yml
@@ -12,6 +12,7 @@ on:
         default: 'true'
   push:
     branches:
+      - main
       - dev-asset
   schedule:
     - cron: '0 * * * *'
@@ -133,6 +134,10 @@ jobs:
             TAG=dev
             TITLE="Development events JSON"
             BODY="Development build of events feed from dev-asset branch.\nICS_SHA256:${{ steps.check_change.outputs.hash }}"
+          elif [ "${GITHUB_EVENT_NAME}" = "push" ] && [ "${GITHUB_REF_NAME}" = "main" ]; then
+            TAG=latest
+            TITLE="Latest events JSON"
+            BODY="Automated update of events feed from main branch.\nICS_SHA256:${{ steps.check_change.outputs.hash }}"
           else
             TAG=latest
             TITLE="Latest events JSON"
@@ -149,8 +154,6 @@ jobs:
             --latest
           if [ "$TAG" = "dev" ]; then
             echo "Dev release asset URL (public): https://github.com/${GITHUB_REPOSITORY}/releases/dev/download/${OUTPUT_FILE}" >> "$GITHUB_STEP_SUMMARY"
-          else
-            echo "Release asset URL (public): https://github.com/${GITHUB_REPOSITORY}/releases/latest/download/${OUTPUT_FILE}" >> "$GITHUB_STEP_SUMMARY"
           fi
       - name: Upload JSON artifact
         uses: actions/upload-artifact@v4
