feat(enrich): add rawEventDetails enrichment + JSON schema + CI validation
- Add rawEventDetails enrichment:
  - Scrape inner HTML of .events-detail-main (fallback .event-details-main)
  - CLI flags: --enrich-raw-details, --enrich-raw-details-overwrite
  - Env toggles: ENRICH_RAW_DETAILS, ENRICH_RAW_DETAILS_OVERWRITE
  - Non-destructive by default; overwrite supported

- Add schema and validation:
  - schema/events.schema.json (draft-07) with optional rawEventDetails
  - tools/validate_json.py using jsonschema
  - requirements: add jsonschema
  - CI: validate generated JSON against schema before publishing

- Workflows:
  - ICS to JSON + Manual Test: pass raw detail flags via repo variables
  - Keep existing title/content enrichment behavior

- Tests/Docs/Tooling:
  - tests/test_enrich_raw_details.py (mocked HTTP) → now 20 tests passing
  - README: schema + rawEventDetails docs and usage
  - CONTRIBUTING: enriched local validation workflow
  - Makefile: gen-raw, gen-enriched-raw, example-validate-raw, example-validate-enriched-raw

Note: Dev builds can include rawEventDetails by setting repo variable ENRICH_RAW_DETAILS=true.

--- a/.github/workflows/ics_to_json.yml
+++ b/.github/workflows/ics_to_json.yml
@@ -31,6 +31,8 @@ jobs:
       FALLBACK_PREPEND_TEXT: ${{ vars.FALLBACK_PREPEND_TEXT }}
       ENRICH_CONTENT: ${{ vars.ENRICH_CONTENT }}
       ENRICH_CONTENT_OVERWRITE: ${{ vars.ENRICH_CONTENT_OVERWRITE }}
+      ENRICH_RAW_DETAILS: ${{ vars.ENRICH_RAW_DETAILS }}
+      ENRICH_RAW_DETAILS_OVERWRITE: ${{ vars.ENRICH_RAW_DETAILS_OVERWRITE }}
       FORCE_REBUILD: ${{ github.event.inputs.force }}
       MANUAL_ENRICH: ${{ github.event.inputs.enrich_titles }}
     steps:
@@ -121,7 +123,20 @@ jobs:
           else
             echo "Enrichment: disabled"
           fi
-          ENRICH_DEBUG=1 python -m src.main --ics-url "${ICS_URL}" --repo-variable "${REPO_VARIABLE}" --output "${OUTPUT_FILE}" ${ENRICH_FLAG}
+          RAW_FLAGS=""
+          if [ "${ENRICH_RAW_DETAILS}" = "true" ] || [ "${ENRICH_RAW_DETAILS}" = "1" ]; then
+            RAW_FLAGS+=" --enrich-raw-details"
+          fi
+          if [ "${ENRICH_RAW_DETAILS_OVERWRITE}" = "true" ] || [ "${ENRICH_RAW_DETAILS_OVERWRITE}" = "1" ]; then
+            RAW_FLAGS+=" --enrich-raw-details-overwrite"
+          fi
+          ENRICH_DEBUG=1 python -m src.main --ics-url "${ICS_URL}" --repo-variable "${REPO_VARIABLE}" --output "${OUTPUT_FILE}" ${ENRICH_FLAG} ${RAW_FLAGS}
+      - name: Validate JSON against schema
+        if: steps.check_change.outputs.skip != 'true'
+        run: |
+          set -euo pipefail
+          : "${OUTPUT_FILE:=events.json}"
+          python tools/validate_json.py --schema schema/events.schema.json --data "${OUTPUT_FILE}"
       - name: Publish release asset
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
