--- a/.github/workflows/ics_manual_test.yml
+++ b/.github/workflows/ics_manual_test.yml
@@ -19,6 +19,8 @@ jobs:
       REPO_VARIABLE: ${{ vars.REPO_VARIABLE }}
       FALLBACK_PREPEND_TEXT: ${{ vars.FALLBACK_PREPEND_TEXT }}
       ENRICH_TITLES: ${{ github.event.inputs.enrich_titles }}
+      ENRICH_RAW_DETAILS: ${{ vars.ENRICH_RAW_DETAILS }}
+      ENRICH_RAW_DETAILS_OVERWRITE: ${{ vars.ENRICH_RAW_DETAILS_OVERWRITE }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,7 +41,19 @@ jobs:
           : "${OUTPUT_FILE:=events.json}"; echo "OUTPUT_FILE=$OUTPUT_FILE"
           if [ -z "${ICS_URL}" ]; then echo "ICS_URL not set" >&2; exit 1; fi
           ENRICH_FLAG=""; if [ "${ENRICH_TITLES}" = "true" ]; then ENRICH_FLAG="--enrich-titles"; fi
-          python -m src.main --ics-url "${ICS_URL}" --repo-variable "${REPO_VARIABLE}" --output "${OUTPUT_FILE}" ${ENRICH_FLAG}
+          RAW_FLAGS=""
+          if [ "${ENRICH_RAW_DETAILS}" = "true" ] || [ "${ENRICH_RAW_DETAILS}" = "1" ]; then
+            RAW_FLAGS+=" --enrich-raw-details"
+          fi
+          if [ "${ENRICH_RAW_DETAILS_OVERWRITE}" = "true" ] || [ "${ENRICH_RAW_DETAILS_OVERWRITE}" = "1" ]; then
+            RAW_FLAGS+=" --enrich-raw-details-overwrite"
+          fi
+          python -m src.main --ics-url "${ICS_URL}" --repo-variable "${REPO_VARIABLE}" --output "${OUTPUT_FILE}" ${ENRICH_FLAG} ${RAW_FLAGS}
+      - name: Validate JSON against schema
+        run: |
+          set -euo pipefail
+          : "${OUTPUT_FILE:=events.json}"
+          python tools/validate_json.py --schema schema/events.schema.json --data "${OUTPUT_FILE}"
       - name: Publish transient release (manual-latest)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
