--- a/.github/workflows/ics_to_json.yml
+++ b/.github/workflows/ics_to_json.yml
@@ -10,6 +10,18 @@ on:
         description: 'Fetch event page subtitle into title field (default true)'
         required: false
         default: 'true'
+      enrich_raw_extracts:
+        description: 'Extract abstract and bio from raw event details (default true)'
+        required: false
+        default: 'true'
+      replace_latest:
+        description: 'Replace the Latest Events release (instead of creating manual-latest)'
+        required: false
+        default: 'false'
+  push:
+    branches:
+      - main
+      - dev-asset
   schedule:
     - cron: '0 * * * *'
 
@@ -25,8 +37,16 @@ jobs:
       REPO_VARIABLE: ${{ vars.REPO_VARIABLE }}
       OUTPUT_FILE: ${{ vars.OUTPUT_FILE }}
       FALLBACK_PREPEND_TEXT: ${{ vars.FALLBACK_PREPEND_TEXT }}
+      ENRICH_CONTENT: ${{ vars.ENRICH_CONTENT }}
+      ENRICH_CONTENT_OVERWRITE: ${{ vars.ENRICH_CONTENT_OVERWRITE }}
+      ENRICH_RAW_DETAILS: ${{ vars.ENRICH_RAW_DETAILS }}
+      ENRICH_RAW_DETAILS_OVERWRITE: ${{ vars.ENRICH_RAW_DETAILS_OVERWRITE }}
+      ENRICH_RAW_EXTRACTS: ${{ vars.ENRICH_RAW_EXTRACTS }}
+      ENRICH_RAW_EXTRACTS_OVERWRITE: ${{ vars.ENRICH_RAW_EXTRACTS_OVERWRITE }}
       FORCE_REBUILD: ${{ github.event.inputs.force }}
       MANUAL_ENRICH: ${{ github.event.inputs.enrich_titles }}
+      MANUAL_RAW_EXTRACTS: ${{ github.event.inputs.enrich_raw_extracts }}
+      MANUAL_REPLACE_LATEST: ${{ github.event.inputs.replace_latest }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -52,8 +72,14 @@ jobs:
           new_hash=$(sha256sum current.ics | cut -d ' ' -f1)
           echo "New ICS SHA256: $new_hash"
           prev_hash=""
-          if gh release view latest --json body >/dev/null 2>&1; then
-            prev_hash=$(gh release view latest --json body -q '.body' | grep -Eo 'ICS_SHA256:[0-9a-f]+' | cut -d: -f2 || echo "")
+          # Determine which release to check for previous hash
+          if [ "${GITHUB_EVENT_NAME}" = "push" ] && [ "${GITHUB_REF_NAME}" = "dev-asset" ]; then
+            RELEASE_TAG="dev"
+          else
+            RELEASE_TAG="latest"
+          fi
+          if gh release view "$RELEASE_TAG" --json body >/dev/null 2>&1; then
+            prev_hash=$(gh release view "$RELEASE_TAG" --json body -q '.body' | grep -Eo 'ICS_SHA256:[0-9a-f]+' | cut -d: -f2 || echo "")
           fi
           echo "Previous ICS SHA256: ${prev_hash:-<none>}"
           if [ "${FORCE_REBUILD:-false}" = "true" ]; then
@@ -94,7 +120,7 @@ jobs:
             echo "ICS_URL is empty. Define repository variable 'ICS_URL'." >&2
             exit 1
           fi
-          # Decide enrichment: schedule always true; manual defaults true unless explicitly set false
+          # Decide enrichment: schedule always true; manual defaults true unless explicitly set false; push (dev) always true
           ENRICH_EFFECTIVE="true"
           if [ "${GITHUB_EVENT_NAME}" = "workflow_dispatch" ]; then
             case "${MANUAL_ENRICH}" in
@@ -109,18 +135,61 @@ jobs:
           else
             echo "Enrichment: disabled"
           fi
-          ENRICH_DEBUG=1 python -m src.main --ics-url "${ICS_URL}" --repo-variable "${REPO_VARIABLE}" --output "${OUTPUT_FILE}" ${ENRICH_FLAG}
-      - name: Publish release asset (latest)
+          RAW_FLAGS=""
+          if [ "${ENRICH_RAW_DETAILS}" = "true" ] || [ "${ENRICH_RAW_DETAILS}" = "1" ]; then
+            RAW_FLAGS+=" --enrich-raw-details"
+          fi
+          if [ "${ENRICH_RAW_DETAILS_OVERWRITE}" = "true" ] || [ "${ENRICH_RAW_DETAILS_OVERWRITE}" = "1" ]; then
+            RAW_FLAGS+=" --enrich-raw-details-overwrite"
+          fi
+          EXTRACT_FLAGS=""
+          # Handle raw extracts: env vars take precedence, then manual input defaults to true
+          EXTRACT_EFFECTIVE="${ENRICH_RAW_EXTRACTS:-true}"
+          if [ "${GITHUB_EVENT_NAME}" = "workflow_dispatch" ]; then
+            case "${MANUAL_RAW_EXTRACTS}" in
+              ""|"true"|"True"|"TRUE") EXTRACT_EFFECTIVE="true" ;;
+              "false"|"False"|"FALSE") EXTRACT_EFFECTIVE="false" ;;
+            esac
+          fi
+          if [ "${EXTRACT_EFFECTIVE}" = "true" ] || [ "${EXTRACT_EFFECTIVE}" = "1" ]; then
+            EXTRACT_FLAGS+=" --enrich-raw-extracts"
+          fi
+          if [ "${ENRICH_RAW_EXTRACTS_OVERWRITE}" = "true" ] || [ "${ENRICH_RAW_EXTRACTS_OVERWRITE}" = "1" ]; then
+            EXTRACT_FLAGS+=" --enrich-raw-extracts-overwrite"
+          fi
+          ENRICH_DEBUG=1 python -m src.main --ics-url "${ICS_URL}" --repo-variable "${REPO_VARIABLE}" --output "${OUTPUT_FILE}" ${ENRICH_FLAG} ${RAW_FLAGS} ${EXTRACT_FLAGS}
+      - name: Validate JSON against schema
+        if: steps.check_change.outputs.skip != 'true'
+        run: |
+          set -euo pipefail
+          : "${OUTPUT_FILE:=events.json}"
+          python tools/validate_json.py --schema schema/events.schema.json --data "${OUTPUT_FILE}"
+      - name: Publish release asset
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: steps.check_change.outputs.skip != 'true'
         run: |
           set -euo pipefail
           : "${OUTPUT_FILE:=events.json}"
-          TAG=latest
-          TITLE="Latest events JSON"
-          BODY="Automated update of events feed.\nICS_SHA256:${{ steps.check_change.outputs.hash }}"
-          # If release exists, delete it (so it's guaranteed to be 'latest')
+          # Determine release tag based on trigger
+          if [ "${GITHUB_EVENT_NAME}" = "push" ] && [ "${GITHUB_REF_NAME}" = "dev-asset" ]; then
+            TAG=dev
+            TITLE="Development Events"
+            BODY="Development build of events feed from dev-asset branch. ICS_SHA256:${{ steps.check_change.outputs.hash }}"
+          elif [ "${GITHUB_EVENT_NAME}" = "push" ] && [ "${GITHUB_REF_NAME}" = "main" ]; then
+            TAG=latest
+            TITLE="Latest Events"
+            BODY="Automated update of events feed from main branch. ICS_SHA256:${{ steps.check_change.outputs.hash }}"
+          elif [ "${GITHUB_EVENT_NAME}" = "workflow_dispatch" ] && [ "${MANUAL_REPLACE_LATEST}" = "true" ]; then
+            TAG=latest
+            TITLE="Latest Events (Manual)"
+            BODY="Manual update of events feed. ICS_SHA256:${{ steps.check_change.outputs.hash }}"
+          else
+            TAG=latest
+            TITLE="Latest Events"
+            BODY="Automated update of events feed. ICS_SHA256:${{ steps.check_change.outputs.hash }}"
+          fi
+          # If release exists, delete it (so it's guaranteed to be 'latest' or 'dev')
           if gh release view "$TAG" >/dev/null 2>&1; then
             echo "Deleting existing release $TAG to refresh timestamp";
             gh release delete "$TAG" -y || true
@@ -129,11 +198,13 @@ jobs:
             --title "$TITLE" \
             --notes "$BODY" \
             --latest
-          echo "Release asset URL (public): https://github.com/${GITHUB_REPOSITORY}/releases/latest/download/${OUTPUT_FILE}" >> "$GITHUB_STEP_SUMMARY"
+          if [ "$TAG" = "dev" ]; then
+            echo "Dev release asset URL (public): https://github.com/${GITHUB_REPOSITORY}/releases/dev/download/${OUTPUT_FILE}" >> "$GITHUB_STEP_SUMMARY"
+          fi
       - name: Upload JSON artifact
         uses: actions/upload-artifact@v4
         with:
-          name: events-json
+          name: events-json${{ github.event_name == 'push' && github.ref_name == 'dev-asset' && '-dev' || '' }}
           path: ${{ env.OUTPUT_FILE || 'events.json' }}
         if: steps.check_change.outputs.skip != 'true'
       - name: Reset failure streak on success
@@ -147,7 +218,7 @@ jobs:
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add .ci/failure-streak
             git commit -m "chore(ci): reset failure streak to 0 [skip ci]" || true
-            git push origin HEAD:main || true
+            git push origin HEAD:${GITHUB_REF_NAME} || true
           fi
           echo "Failure streak reset (prior=$prior)." >> $GITHUB_STEP_SUMMARY
       - name: Handle failure (increment streak, maybe open issue)
@@ -164,15 +235,15 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .ci/failure-streak
           git commit -m "chore(ci): failure streak $new [skip ci]" || true
-          git push origin HEAD:main || true
+          git push origin HEAD:${GITHUB_REF_NAME} || true
           # Ensure label exists
           gh label list --search ci-failure | grep -qi '^ci-failure' || gh label create ci-failure --color FF0000 --description "Automated CI failure alerts" || true
           if [ "$new" -ge 3 ]; then
             existing=$(gh issue list --state open --label ci-failure --search "ICS feed processing failures" --json number -q '.[0].number' || echo "")
             if [ -z "$existing" ]; then
-              gh issue create --title "ICS feed processing failures (streak $new)" --label ci-failure --body "The ICS to JSON workflow has failed $new consecutive times. Please investigate logs." || true
+              gh issue create --title "ICS feed processing failures (streak $new) on ${GITHUB_REF_NAME}" --label ci-failure --body "The ICS to JSON workflow has failed $new consecutive times on branch ${GITHUB_REF_NAME}. Please investigate logs." || true
             else
-              gh issue comment "$existing" --body "Another failure (streak $new)." || true
+              gh issue comment "$existing" --body "Another failure on ${GITHUB_REF_NAME} (streak $new)." || true
             fi
           fi
           echo "Failure streak incremented to $new" >> $GITHUB_STEP_SUMMARY
